[metadata]
name = openfoam_wrapper
version = 0.04
summary = This is the OpenMDAO wrapper for OpenFOAM with PyFoam.
description-file = README
keywords = openmdao
home-page = 
download-url = https://github.com/TatsuyaKatayama/openfoam_wrapper
author = TatsuyaKatayama
author-email = katayama1227ron@gmail.com
maintainer = TatsuyaKatayama
maintainer-email = katayama1227ron@gmail.com
license = GPLv2
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = [OpenFOAM-2.3.x , PyFoam]
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

